--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.9.10",
+    "@material-ui/core": "4.9",
+    "@material-ui/data-grid": "^4.0.0-alpha.20",
     "@material-ui/icons": "^4.9.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
